sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:18: error: Int does not take parameters
              echange(i,(i+ecart))
                     ^