sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  var length = getNombreValeurs()
  var i=0
  var echange=0
  while (ecart>1 && echange==0)
  	{
      echange=0
      while ((i+ecart)<length)
        {
          if (ecart>1)
            {
              ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
            }
          if (plusPetitQue(i,getValeur(i+ecart)))
            {
              echange(i,(i+ecart))
              echange = echange+1
              i=i+1
            }
        }
    }
}